# todo_app

./: .aiignore  .gitignore  CMakeLists.txt  Dockerfile  README-verzovani.md  README.md  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  ci.yaml  devops-audit.md  devops-checklist.md  docker-compose.dev-hot.yaml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.cpp  run-local.sh  stack.yaml
.aiassistant/rules/: rules.md
.github/workflows/: ci.yaml  post-release-bump.yml
backend/: .gitignore  CMakeLists.txt  Dockerfile  FetchContentDependencies.txt  README.md  TodoAppDependenciesSetup.txt  deps.cmake
backend/cmake/: Dependencies.cmake
backend/src/: main.cpp
backend/src/presentation/http/: RestServer.cpp  RestServer.h  SimpleCORS.h  TaskMapper.h
backend/src/presentation/http/dto/: TaskDto.h  VersionDto.h
backend/src/presentation/ui/: ConsoleUI.cpp  Messages.cpp  Messages.h
backend/src/repository/: TaskRepository.h
backend/src/repository/file/: FileRepository.cpp  FileRepository.h
backend/src/service/: TaskManager.cpp  TaskManager.h
backend/src/version/: version_service.cpp
backend/tests/unit/: CMakeLists.txt
backend/tests/unit/presentation/http/: RestServer_test.cpp
backend/tests/unit/repository/: FileRepository_test.cpp
backend/tests/unit/service/: TaskManager_test.cpp
docs/: openapi.yaml
frontend/: Dockerfile  README.md  RUN_CONFIGURATIONS.md  test-patch.js  vite.config.ts
frontend/src/: App.tsx
nginx/: nginx.conf
src/: Task.h  TaskManager.cpp  TaskManager.h  main.cpp
src/http/: CreateTaskDto.h  RestServer.cpp  RestServer.h  TaskDto.h  TaskMapper.h  UpdateTaskDto.h
src/http/dto/: CreateTaskDto.h
src/model/: Task.h  TaskRepository.h
src/presentation/http/: RestServer.cpp  RestServer.h
src/presentation/ui/: ConsoleUI.h  UI.h
src/repository/: FileRepository.h
src/repository/file/: FileRepository.cpp
src/repository/memory/: InMemoryTaskRepository.h
src/service/: FileRepository.cpp  FileRepository.h  InMemoryTaskRepository.cpp  InMemoryTaskRepository.h  TaskManager.cpp  TaskManager.h
src/service/dso/: TaskDSO.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h  Messages.cpp  Messages.def  Messages.h  UI.h
tests/: RestServer_test.cpp  TaskManager_test.cpp
tests/http/: RestServer_test.cpp
tests/service/: FileRepository_test.cpp  InMemoryTaskRepository_test.cpp  TaskManager_test.cpp
tests/unit/presentation/http/: RestServer_test.cpp
tests/unit/repository/: FileRepository_test.cpp  InMemoryTaskRepository_test.cpp
